# khome-lang

./: .gitignore  freq_words_info.py  main.py  pyproject.toml  words_freq.py
data/: full_words.csv  words.csv
klang/: app.py  config.py  db.py  di.py  helpers.py  lang.py  llm.py  logs.py  main.py  models.py  oauth.py  storage.py  user_settings.py  word_training.py  words.txt
klang/api/: common.py  oauth.py  training.py  vocabulary.py
