[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khome-lang"
version = "0.1.0"
description = "Lang learn project"
authors = [
    { name = "Dmitry Konovalov", email = "dkanavis@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi",
    "sqlmodel",
    "uvicorn",
    "pydantic",
    "asyncpg",
    "pyyaml",
    "yarl",
    "aiohttp",
    "openai",
    "aiofiles",
    "dishka",
]

[project.scripts]
klang = "klang.main:main"
